# wallpaper

./: Cargo.toml
files/: example_config.toml
src/: command.rs  daemon.rs  main.rs  state.rs
src/daemon/: daemon.rs  state.rs
