[package]
name = "wallpaper"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wp"
path = "src/main.rs"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
clap = { version = "3.2.11", features = ["derive", "cargo"] }
ctrlc = { version = "3.2.2", features = ["termination"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
